projects/vb6parse/snapshots/syntax/library/statements/sendkeys/sendkeys_in_with_block.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: WithStatement
      children:
        - kind: WithKeyword
          text: With
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: automation
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SendKeysStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SendKeysKeyword
                  text: SendKeys
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: PeriodOperator
                              text: "."
                            - kind: Identifier
                              text: keySequence
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: WithKeyword
          text: With
        - kind: Newline
          text: "\n"
