projects/vb6parse/snapshots/syntax/library/statements/sendkeys/sendkeys_with_concatenation.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SendKeysStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SendKeysKeyword
                  text: SendKeys
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"Hello \""
                                - kind: Whitespace
                                  text: " "
                                - kind: Ampersand
                                  text: "&"
                                - kind: Whitespace
                                  text: " "
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: userName
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"{ENTER}\""
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
